--- a/src/components/disciplineList/disciplineListStyles.scss
+++ b/src/components/disciplineList/disciplineListStyles.scss
@@ -31,6 +31,7 @@
         font-weight: 500;
         box-shadow: $color-delimetershadow;
         border-bottom: 1px solid $color-dirtywhite;
+        
 
         &_selected{
             background-color: rgb(165, 173, 200);
@@ -42,24 +43,31 @@
         &:hover{
             background-color: $color-dirtywhite;
         }
-   }
 
-   &__item-fio{
-         display: flex;
-         
-   }
+        &__fio{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            
+      }
 
-   &__item_actions{
+       
+    &__actions{
         margin-left: auto;
-         display: flex;
-         gap: 8px;
-         min-width: 44px;
-         max-width: 44px;
+        
+        display: flex;
+        gap: 8px;
+        min-width: 44px;
+        max-width: 44px;
 
         & svg {
             &:hover{
                 opacity: 0.7;
             }
         }
+    }
+   
    }
+
+ 
 }
