--- a/src/components/informationPole/informationStyles.scss
+++ b/src/components/informationPole/informationStyles.scss
@@ -27,7 +27,13 @@
         &__row {
             display: flex;
             flex-direction: row;
-            gap: 10px;
+            gap: 20px;
+        
+            &__title{
+                gap: 5px;
+                padding-right: 10px;
+                //width: 30px;
+            }
         }
     }
 
